@@ -83,6 +83,13 @@ typedef struct _CAPTURE_BACKTRACE_THREAD_CONTEXT
     ULONG BackTraceHash;
 } CAPTURE_BACKTRACE_THREAD_CONTEXT, *PCAPTURE_BACKTRACE_THREAD_CONTEXT;
 
+typedef struct _EXIT_THREAD_CONTEXT
+{
+    KAPC Apc;
+    KEVENT CompletedEvent;
+    NTSTATUS ExitStatus;
+} EXIT_THREAD_CONTEXT, *PEXIT_THREAD_CONTEXT;
+
 /* FUNCTION DEFS */
 
 NTSTATUS NTAPI PsGetContextThread(
