@@ -49,6 +49,7 @@
             this.label1 = new System.Windows.Forms.Label();
             this.label11 = new System.Windows.Forms.Label();
             this.label2 = new System.Windows.Forms.Label();
+            this.linkGamingMasteR = new System.Windows.Forms.LinkLabel();
             this.linkSysinternals = new System.Windows.Forms.LinkLabel();
             this.linkNtInternals = new System.Windows.Forms.LinkLabel();
             this.linkReactOS = new System.Windows.Forms.LinkLabel();
@@ -108,7 +109,7 @@
             // 
             this.linkFamFamFam.AutoSize = true;
             this.linkFamFamFam.LinkBehavior = System.Windows.Forms.LinkBehavior.NeverUnderline;
-            this.linkFamFamFam.Location = new System.Drawing.Point(6, 185);
+            this.linkFamFamFam.Location = new System.Drawing.Point(6, 198);
             this.linkFamFamFam.Name = "linkFamFamFam";
             this.linkFamFamFam.Size = new System.Drawing.Size(136, 13);
             this.linkFamFamFam.TabIndex = 5;
@@ -120,7 +121,7 @@
             // 
             this.linkVistaMenu.AutoSize = true;
             this.linkVistaMenu.LinkBehavior = System.Windows.Forms.LinkBehavior.NeverUnderline;
-            this.linkVistaMenu.Location = new System.Drawing.Point(6, 198);
+            this.linkVistaMenu.Location = new System.Drawing.Point(6, 211);
             this.linkVistaMenu.Name = "linkVistaMenu";
             this.linkVistaMenu.Size = new System.Drawing.Size(183, 13);
             this.linkVistaMenu.TabIndex = 6;
@@ -132,7 +133,7 @@
             // 
             this.linkHexBox.AutoSize = true;
             this.linkHexBox.LinkBehavior = System.Windows.Forms.LinkBehavior.NeverUnderline;
-            this.linkHexBox.Location = new System.Drawing.Point(6, 172);
+            this.linkHexBox.Location = new System.Drawing.Point(6, 185);
             this.linkHexBox.Name = "linkHexBox";
             this.linkHexBox.Size = new System.Drawing.Size(151, 13);
             this.linkHexBox.TabIndex = 7;
@@ -176,7 +177,7 @@
             // 
             this.linkAsm.AutoSize = true;
             this.linkAsm.LinkBehavior = System.Windows.Forms.LinkBehavior.NeverUnderline;
-            this.linkAsm.Location = new System.Drawing.Point(6, 211);
+            this.linkAsm.Location = new System.Drawing.Point(6, 224);
             this.linkAsm.Name = "linkAsm";
             this.linkAsm.Size = new System.Drawing.Size(198, 13);
             this.linkAsm.TabIndex = 12;
@@ -188,7 +189,7 @@
             // 
             this.linkTreeViewAdv.AutoSize = true;
             this.linkTreeViewAdv.LinkBehavior = System.Windows.Forms.LinkBehavior.NeverUnderline;
-            this.linkTreeViewAdv.Location = new System.Drawing.Point(6, 224);
+            this.linkTreeViewAdv.Location = new System.Drawing.Point(6, 237);
             this.linkTreeViewAdv.Name = "linkTreeViewAdv";
             this.linkTreeViewAdv.Size = new System.Drawing.Size(165, 13);
             this.linkTreeViewAdv.TabIndex = 12;
@@ -211,6 +212,7 @@
             this.flowCredits.Controls.Add(this.label1);
             this.flowCredits.Controls.Add(this.label11);
             this.flowCredits.Controls.Add(this.label2);
+            this.flowCredits.Controls.Add(this.linkGamingMasteR);
             this.flowCredits.Controls.Add(this.linkSysinternals);
             this.flowCredits.Controls.Add(this.linkNtInternals);
             this.flowCredits.Controls.Add(this.linkReactOS);
@@ -315,11 +317,23 @@
             this.label2.TabIndex = 17;
             this.label2.Text = "EricJH - Windows 7 testing";
             // 
+            // linkGamingMasteR
+            // 
+            this.linkGamingMasteR.AutoSize = true;
+            this.linkGamingMasteR.LinkBehavior = System.Windows.Forms.LinkBehavior.NeverUnderline;
+            this.linkGamingMasteR.Location = new System.Drawing.Point(6, 120);
+            this.linkGamingMasteR.Name = "linkGamingMasteR";
+            this.linkGamingMasteR.Size = new System.Drawing.Size(210, 13);
+            this.linkGamingMasteR.TabIndex = 27;
+            this.linkGamingMasteR.TabStop = true;
+            this.linkGamingMasteR.Text = "GamingMasteR - Windows internals advice";
+            this.linkGamingMasteR.LinkClicked += new System.Windows.Forms.LinkLabelLinkClickedEventHandler(this.linkGamingMasteR_LinkClicked);
+            // 
             // linkSysinternals
             // 
             this.linkSysinternals.AutoSize = true;
             this.linkSysinternals.LinkBehavior = System.Windows.Forms.LinkBehavior.NeverUnderline;
-            this.linkSysinternals.Location = new System.Drawing.Point(6, 120);
+            this.linkSysinternals.Location = new System.Drawing.Point(6, 133);
             this.linkSysinternals.Name = "linkSysinternals";
             this.linkSysinternals.Size = new System.Drawing.Size(100, 13);
             this.linkSysinternals.TabIndex = 17;
@@ -331,7 +345,7 @@
             // 
             this.linkNtInternals.AutoSize = true;
             this.linkNtInternals.LinkBehavior = System.Windows.Forms.LinkBehavior.NeverUnderline;
-            this.linkNtInternals.Location = new System.Drawing.Point(6, 133);
+            this.linkNtInternals.Location = new System.Drawing.Point(6, 146);
             this.linkNtInternals.Name = "linkNtInternals";
             this.linkNtInternals.Size = new System.Drawing.Size(61, 13);
             this.linkNtInternals.TabIndex = 24;
@@ -343,7 +357,7 @@
             // 
             this.linkReactOS.AutoSize = true;
             this.linkReactOS.LinkBehavior = System.Windows.Forms.LinkBehavior.NeverUnderline;
-            this.linkReactOS.Location = new System.Drawing.Point(6, 146);
+            this.linkReactOS.Location = new System.Drawing.Point(6, 159);
             this.linkReactOS.Name = "linkReactOS";
             this.linkReactOS.Size = new System.Drawing.Size(237, 13);
             this.linkReactOS.TabIndex = 25;
@@ -355,7 +369,7 @@
             // 
             this.label4.AutoSize = true;
             this.label4.Font = new System.Drawing.Font("Microsoft Sans Serif", 8.25F, System.Drawing.FontStyle.Bold, System.Drawing.GraphicsUnit.Point, ((byte)(0)));
-            this.label4.Location = new System.Drawing.Point(6, 159);
+            this.label4.Location = new System.Drawing.Point(6, 172);
             this.label4.Name = "label4";
             this.label4.Size = new System.Drawing.Size(80, 13);
             this.label4.TabIndex = 26;
@@ -365,7 +379,7 @@
             // 
             this.linkTaskDialog.AutoSize = true;
             this.linkTaskDialog.LinkBehavior = System.Windows.Forms.LinkBehavior.NeverUnderline;
-            this.linkTaskDialog.Location = new System.Drawing.Point(6, 237);
+            this.linkTaskDialog.Location = new System.Drawing.Point(6, 250);
             this.linkTaskDialog.Name = "linkTaskDialog";
             this.linkTaskDialog.Size = new System.Drawing.Size(114, 13);
             this.linkTaskDialog.TabIndex = 21;
@@ -377,7 +391,7 @@
             // 
             this.linkICSharpCode.AutoSize = true;
             this.linkICSharpCode.LinkBehavior = System.Windows.Forms.LinkBehavior.NeverUnderline;
-            this.linkICSharpCode.Location = new System.Drawing.Point(6, 250);
+            this.linkICSharpCode.Location = new System.Drawing.Point(6, 263);
             this.linkICSharpCode.Name = "linkICSharpCode";
             this.linkICSharpCode.Size = new System.Drawing.Size(144, 13);
             this.linkICSharpCode.TabIndex = 19;
@@ -388,7 +402,7 @@
             // label3
             // 
             this.label3.AutoSize = true;
-            this.label3.Location = new System.Drawing.Point(6, 263);
+            this.label3.Location = new System.Drawing.Point(6, 276);
             this.label3.Name = "label3";
             this.label3.Size = new System.Drawing.Size(0, 13);
             this.label3.TabIndex = 15;
@@ -396,7 +410,7 @@
             // labelFiller
             // 
             this.labelFiller.AutoSize = true;
-            this.labelFiller.Location = new System.Drawing.Point(6, 276);
+            this.labelFiller.Location = new System.Drawing.Point(6, 289);
             this.labelFiller.Name = "labelFiller";
             this.labelFiller.Size = new System.Drawing.Size(31, 13);
             this.labelFiller.TabIndex = 17;
@@ -492,6 +506,7 @@
         private System.Windows.Forms.LinkLabel linkReactOS;
         private System.Windows.Forms.Label label2;
         private System.Windows.Forms.Label label4;
+        private System.Windows.Forms.LinkLabel linkGamingMasteR;
 
     }
 }
